<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4DE"
    android:backgroundTint="#ECD9D9"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/my_header"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Бетон от производителя в Москве и Московской области"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="2"
                android:backgroundTint="@color/my_button"
                android:text="@string/menu"
                app:cornerRadius="50sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <Button
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:onClick="goAboutActivity"
            android:radius="25dp"
            android:text="@string/about"
            app:cornerRadius="50sp" />

        <Button
            android:id="@+id/certificates"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:onClick="goCertificateActivity"
            android:text="@string/certificates"
            app:cornerRadius="50sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:onClick="goPriceActivity"
            android:text="@string/price"
            app:cornerRadius="50sp" />

        <Button
            android:id="@+id/calc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:onClick="goCalcActivity"
            android:shadowColor="#A39A9A"
            android:shadowDx="5"
            android:shadowDy="5"
            android:text="@string/calc"
            app:cornerRadius="50sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/delivery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:onClick="goDeliveryActivity"
            android:text="@string/delivery"
            app:cornerRadius="50sp" />

        <Button
            android:id="@+id/avtopark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:onClick="goAvtoparkActivity"
            android:text="@string/avtopark"
            app:cornerRadius="50sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/arenda"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:text="@string/avtopark"
            app:cornerRadius="50sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:text="Button"
            app:cornerRadius="50sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:text="Button"
            app:cornerRadius="50sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/blog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"

            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:onClick="goBlogActivity"
            android:text="@string/blog"
            app:cornerRadius="50sp" />

        <Button
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button"
            android:onClick="goContactsActivity"
            android:text="@string/contact"
            app:cornerRadius="50sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/my_header"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/home"
            android:backgroundTint="@color/my_header"
            android:contentDescription="@string/profile"
            android:layout_marginTop="15sp"
            />

        <ImageButton
            android:id="@+id/chat"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/chat"
            app:srcCompat="@drawable/chat"
            android:backgroundTint="@color/my_header"
            android:layout_marginTop="15sp"
            />

        <ImageButton
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/profile"
            android:backgroundTint="@color/my_header"
            android:contentDescription="@string/profile"
            android:layout_marginTop="15sp"
            />
        <ImageButton
            android:id="@+id/call"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/call"
            android:backgroundTint="@color/my_header"
            android:contentDescription="@string/chat"
            android:layout_marginTop="15sp"
            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>